--- a/css/main.css
+++ b/css/main.css
@@ -642,3 +642,50 @@ h2, h3
 	width: 100%;
 	height: auto;
 }
+
+
+/* ------- NEWSLETTERS STYLING -------- */
+
+/* newsletter library section  */
+#library_content {
+	display: flex;
+	flex-direction: row;
+	justify-content: center;
+	width: 90%;
+	height: auto;
+	flex-wrap: wrap;
+	margin-left: 5%;
+}
+
+#library_content img {
+	width: 50%;
+	height: auto;
+}
+
+/* add more section */
+#add_content {
+	width: 90%;
+	height: auto;
+}
+
+#add_content p {
+	font-family: arial, sans-serif;
+	color: black;
+	text-align: justify;
+	line-height: 1em;
+	font-size: 1.2em;
+	margin-left: 10%;
+}
+
+#add_content button {
+	width: 35%;
+	height: auto;
+	background-color: darkolivegreen;
+	color: white;
+	border-radius: 10px;
+	margin-left: 38%;
+	padding: 10px;
+	font-size: 1em;
+	font-weight: bold;
+	margin-top: 7%;
+}
