--- a/css/main.css
+++ b/css/main.css
@@ -337,13 +337,13 @@ h2, h3
 
 .fa-chevron-left {
 	margin: 0 0 0 9%;
+	font-size: 2em;
+	color: darkolivegreen;
+	cursor: pointer;
 }
 
 .fa-chevron-right {
 	margin: 0 5% 0 77%;
-}
-
-.fas {
 	font-size: 2em;
 	color: darkolivegreen;
 	cursor: pointer;
@@ -418,10 +418,122 @@ h2, h3
 
 /* ------- ABOUT US STYLING -------- */
 
-/* COLLAPSIBLE SHOULD GO HERE!!! */
-.collapsible_1 img {
-	margin: 40px 0 20px 0;
+/* this Collapsible 1 */
+.collapsible_1 {
+	background-image: url(../images/about-project_1.png);
+	background-repeat: no-repeat;
+	background-size: cover;
+	background-position: center;
+	width: 100%;
+	height: 150px;
+	margin: 10% 0 10% 0;
 }
+
+.collapsible_1 h2 {
+	font-family: arial, sans-serif;
+	color: white;
+	font-size: 2em;
+	font-weight: bold;
+	text-align: center;
+	margin: 0 0 5% 0;
+	padding-top: 5%;
+}
+
+.collapsible_1 h3 {
+	font-family: arial, sans-serif;
+	color: white;
+	font-size: 1.8em;
+	font-style: italic;
+	text-align: center;
+}
+
+.collapsible_1_content {
+	width: 90%;
+	height: auto;
+}
+
+.collapsible_1_content p {
+	font-family: arial, sans-serif;
+	color: black;
+	text-align: justify;
+	line-height: 1em;
+	font-size: 1.2em;
+	margin-left: 10%;
+}
+
+.collapsible_1_content {
+	display: none;
+ 	margin-top: 20px;
+}
+
+.collapsible_1_content.slideToggle {
+ display: block;
+}
+
+/* this Collapsible 2 */
+.collapsible_2 {
+	background-image: url(../images/projects-project_2.png);
+	background-repeat: no-repeat;
+	background-size: cover;
+	background-position: center;
+	width: 100%;
+	height: 150px;
+	margin: 10% 0 10% 0;
+}
+
+.collapsible_2 h2 {
+	font-family: arial, sans-serif;
+	color: white;
+	font-size: 2em;
+	font-weight: bold;
+	text-align: center;
+	margin: 0 0 5% 0;
+	padding-top: 5%;
+}
+
+.collapsible_2 h3 {
+	font-family: arial, sans-serif;
+	color: white;
+	font-size: 1.8em;
+	font-style: italic;
+	text-align: center;
+}
+
+.collapsible_2_content {
+	width: 90%;
+	height: auto;
+}
+
+.collapsible_2_content p {
+	font-family: arial, sans-serif;
+	color: black;
+	text-align: justify;
+	line-height: 1em;
+	font-size: 1.2em;
+	margin-left: 10%;
+}
+
+.collapsible_2_content {
+	display: none;
+ 	margin-top: 20px;
+}
+
+.collapsible_2_content.slideToggle {
+ display: block;
+}
+
+/* Collapsible arrow */
+.fa-chevron-down {
+	margin-left: 46%;
+	font-size: 2em;
+	color: white;
+	margin-top: 4%;
+	cursor: pointer;
+}
+
+
+
+
 
 /* become a member section */
 #become_image {
@@ -728,6 +840,7 @@ h2, h3
 	font-weight: bold;
 	margin-top: 7%;
 }
+
 
 /* ------- PROJECTS STYLING -------- */
 /* projects and events section */
