--- a/css/main.css
+++ b/css/main.css
@@ -418,7 +418,7 @@ h2, h3
 
 /* ------- ABOUT US STYLING -------- */
 
-/* this Collapsible 1 */
+/* Collapsible 1 */
 .collapsible_1 {
 	background-image: url(../images/about-project_1.png);
 	background-repeat: no-repeat;
@@ -470,7 +470,7 @@ h2, h3
  display: block;
 }
 
-/* this Collapsible 2 */
+/* Collapsible 2 */
 .collapsible_2 {
 	background-image: url(../images/projects-project_2.png);
 	background-repeat: no-repeat;
@@ -787,11 +787,50 @@ h2, h3
 }
 
 /* Useful links section */
-/* A COLLAPSIBLE SHOULD GO HERE!!! */
+/* this Links collapsible */
 
-.links_collapsible img {
+/* Collapsible 1 */
+.collapsible_1_links {
+	background-image: url(../images/about-about_section_bg.png);
+	background-repeat: no-repeat;
+	background-size: cover;
+	background-position: center;
 	width: 100%;
+	height: 150px;
+	margin: 10% 0 10% 0;
+}
+
+.collapsible_1_links h2 {
+	font-family: arial, sans-serif;
+	color: white;
+	font-size: 2em;
+	font-weight: bold;
+	text-align: center;
+	margin: 0 0 5% 0;
+	padding-top: 5%;
+}
+
+.collapsible_1_links_con {
+	width: 90%;
 	height: auto;
+}
+
+.collapsible_1_links_con p {
+	font-family: arial, sans-serif;
+	color: black;
+	text-align: justify;
+	line-height: 1em;
+	font-size: 1.2em;
+	margin-left: 10%;
+}
+
+.collapsible_1_links_con {
+	display: none;
+ 	margin-top: 20px;
+}
+
+.collapsible_1_links_con.slideToggle {
+ display: block;
 }
 
 
