--- a/css/main.css
+++ b/css/main.css
@@ -1018,12 +1018,31 @@ h2, h3
 
 /* media query for 500px */
 @media screen and (min-width: 31.25em) {
+	/* general - collapsibles */
 	.fa-chevron-right, .fa-chevron-left {
 		margin-top: 19%
 	}
+
+	/* index - images */
+	#about_image {
+		height: 260px;
+	}
+
+	#memberships_image {
+		height: 260px;
+	}
+
+	/* index - content */
+	#about_content button {
+		font-size: 1.3em;
+	}
+
+	#memberships_content button {
+		font-size: 1.3em;
+	}
 }
 
-/* media query for 685px */
+/* media query for 685px (tablet) */
 @media screen and (min-width: 42.8125em) {
 	/* general - hamburger menu */
 	#mainNav button {
@@ -1288,5 +1307,150 @@ h2, h3
 @media screen and (min-width: 57.5em) {
 	.fa-chevron-right, .fa-chevron-left {
 		margin-top: 10%
+	}
+}
+
+/* media query for 1024px (desktop)*/
+@media screen and (min-width: 64em) {
+	/* general - navbar */
+	#mainNav button {
+		display: none;
+	}
+
+	#logoHeader {
+		width: 14%;
+		margin-top: 5%;
+		margin-left: 4%;
+		position: absolute;
+	}
+
+  #button {
+    display: none;
+  }
+
+  #burgerContent {
+    display: flex;
+    flex-direction: row;
+    margin: 0;
+  }
+
+  #mainNav {
+    text-align: right;
+    text-transform: uppercase;
+    font-size: 0.85em;
+		margin-left: 20%;
+  }
+
+  #burgerMenu {
+    text-align: right;
+  }
+
+  #mainNav li {
+    display: inline;
+    border-bottom: none;
+		margin-left: 20px;
+  }
+
+  #mainNav li a {
+    background-color: transparent;
+    display: inline;
+    padding: 5px 0;
+    text-decoration: none;
+    color: black;
+		font-size: 1.2em;
+  }
+
+  /* #mainNav li a:hover {
+    color: #8fa777;
+    border-bottom: 3px solid #8fa771;
+    padding-bottom: 5px;
+    background-color: transparent;
+  } */
+
+  #mainNav li:first-child {
+    border-top: none;
+  }
+
+  #mainNav li:last-child {
+    margin-top: 0;
+  }
+
+	#burgerContent {
+		background-color: transparent;
+	}
+
+	#burgerContent ul {
+		position: absolute;
+		margin-top: 11%;
+		margin-left: 6%;
+	}
+
+	/* general - social media header */
+	#facebook_header img {
+		width: 4%;
+	}
+
+	#email_header img {
+		width: 4%;
+		margin-left: 0%;
+	}
+
+	#social_media_header {
+		margin-left: 71%;
+		display: flex;
+		flex-direction: row;
+		justify-content: space-evenly;
+	}
+
+	/* general - hero text */
+	.hero_text h2 {
+		margin-left: 5%;
+		margin-top: 30%;
+		font-size: 3.0em;
+	}
+
+	.hero_text h3 {
+		margin-top: 4%;
+		margin-left: -5%;
+		width: 65%;
+	}
+
+	/* general - titles */
+	#about_title {
+		font-size: 2em;
+	}
+
+	#events_title {
+		font-size: 2em;
+		margin: 10% 0 5% 0;
+	}
+
+	#memberships_title {
+		font-size: 2em;
+		margin: 10% 0 5% 0;
+	}
+
+	#sponsors_title {
+		font-size: 2em;
+		margin: 10% 0 5% 0;
+	}
+
+	#team_title {
+		font-size: 2em;
+		margin: 10% 0 5% 0;
+	}
+
+	#projects_title {
+		font-size: 2.8em;
+	}
+
+	#member_title {
+		font-size: 2.8em;
+	}
+
+	/* general - section division */
+	.section_division {
+		margin: 9% 0 -6% 42%;
+		width: 17%;
 	}
 }
