--- a/css/main.css
+++ b/css/main.css
@@ -1453,4 +1453,125 @@ h2, h3
 		margin: 9% 0 -6% 42%;
 		width: 17%;
 	}
+
+	/* general - desktop footer nav */
+	#footerNav {
+		display: flex;
+		flex-direction: row;
+		justify-content: space-evenly;
+		margin-left: 29%;
+		margin-top: 8%;
+	}
+
+	#footerNav li a {
+		text-decoration: none;
+		color: white;
+	}
+
+	#footerNav a {
+		font-size: 0.8em;
+	}
+
+	#logoFooter img {
+		width: 14%;
+		margin-top: -2%;
+		margin-left: 4%;
+		position: absolute;
+	}
+
+	#facebook_footer img {
+		width: 4%;
+		position: absolute;
+		margin-left: 4%;
+	}
+
+	#email_footer img {
+		width: 4%;
+		margin-left: 0%;
+		position: absolute;
+	}
+
+	#social_media_footer {
+		margin-left: 71%;
+		display: flex;
+		flex-direction: row;
+		justify-content: space-evenly;
+		padding-top: 3%;
+	}
+
+	#back_to_top a {
+		display: none;
+	}
+
+	/* index - about section */
+	.about_flex {
+		display: flex;
+		flex-direction: row;
+		justify-content: space-evenly;
+	}
+
+	#about_content p {
+		font-size: 1.3em;
+		line-height:1.3em;
+		width: 76%;
+		margin-top: 31%;
+	}
+
+	#about_content button {
+		font-size: 1.3em;
+		margin-left: 53%;
+		border-radius: 5px;
+		width: 32%;
+	}
+
+	/* index - carousel */
+	#carousel_container {
+		width: 90%;
+	}
+
+	.fa-chevron-left {
+		margin-left: 7%;
+		margin-top: 14%;
+	}
+
+	.fa-chevron-right {
+		margin-top: 14%;
+	}
+
+	/* index - membership */
+	.member_flex {
+		display: flex;
+		flex-direction: row;
+		justify-content: space-evenly;
+	}
+
+	#memberships_image {
+		order: 1;
+	}
+
+	#memberships_content p {
+		font-size: 1.3em;
+		line-height:1.3em;
+		width: 76%;
+		margin-top: 31%;
+	}
+
+	#memberships_content button {
+		font-size: 1.3em;
+		margin-left: 10%;
+		border-radius: 5px;
+		width: 32%;
+	}
+
+	/* index - sponsors */
+	#sponsors_logos_container {
+		display: flex;
+		flex-direction: row;
+		flex-wrap: wrap;
+		justify-content: space-evenly;
+		width: 90%;
+		margin-top: 11%;
+		margin-left: 5%;
+		margin-bottom: 5%;
+	}
 }
